assets/css/edit-sass.scss
/* ... */
.content_container {
    @include ex(transform-origin,
    top center);
    padding: 5px;
    position: relative;
    color: black;
    [contenteditable=true] {
        position: relative;
    }
    padding-top: 0.1in;
    &.left {
        @include ex(transform-origin, top left);
    }
}
.layout-note {
    .content_well {
        background-color: white;
        background-image: none !important;
        left: 252px;
        .content {
            height: 100%;
            right: 0px;
            position: absolute;
            #note-well {
              padding: 0;
            }
            #note-well, .note-page, .note-section {
                width: 100%;
                height: 100%;
            }
            .content_container {
                @include ex(transform-origin,
                top left);
            }
            .note-page {
                position: relative;
                overflow: auto;
                padding: 5px;
                .note-title {
                    position: relative;
                    left: 20px;
                    top: 20px;
                    min-height: 32pt;
                    line-height: 32pt;
                    min-width: 250px;
                    font-size: 24pt;
                    border-left: none;
                    border-bottom: 1px solid #666;
                    background-color: transparent;
                }
                section {
                    min-height: 16px;
                    padding: 8px;
                    width: 250px;
                    position: absolute;
                    display: inline-block;
                    background-color: #f5f5f5;
                    border-left: 3px solid #666;
                    &[contenteditable=true] {
                        outline: 1px dashed #aaa;
                    }
                }
            }
        }
    }
}
ul.nav.nav-list {
  line-height: 10px;
  a {
    color: #333333;
  }
  li {
    &.active2 > a,
    .active > a {
      font-weight: bold;
      &:hover {
        background-color: transparent !important;
      }
      border-right: 1px solid #333333;
    }
    ul.nav.nav-list {
      margin-left: -5px;
      border: none;
      font-weight: normal;
      li {
        margin-left: 20px;
      }
    }
  }
}
.open {
    z-index: 10;
}
.badge-pulse {
    @include ex(animation-duration,
    1s);
    @include ex(animation-name,
    badge-glow);
    @include ex(animation-iteration-count,
    infinite);
    @include ex(animation-direction,
    alternate);
}
@include keyframes(badge-glow) {
    from {
        background-color: #999;
    }
    to {
        background-color: #f89406;
    }
}
.Chart {
  $size: 10px;
  text-align: center;
  background-color: white;
  h2 {
    margin: 0;
  }
  h3 {
    display: inline-block;
    margin: 0;
    &.y {
      transform: rotate(-90deg) translateX(-100%);
      transform-origin: top left 0;
      height: 0;
      float: left;
    }
  }
  canvas {
    float: right;
  }
  .legend li {
    display: inline-block;
    span {
      display: inline-block;
      margin-right: 5px;
      height: $size;
      width: $size;
    }
    margin-right: 5px;
  }
}
@media print {
  body > * {
    display: none;
  }
  body, .content_well {
    overflow: visible;
    position: initial;
    display: block !important;
  }
  .content_well, .content_well * {
    .content_container {
      margin: 0;
      border: 0;
      .page {
        border: 0;
        margin: 0;
      }
      display: initial;
    }
  }
  .return_edit {
    display: none !important;
  }
}

